<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/NameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/habit_name" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:hint="@string/add_name"/>

    <TextView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_line" />

    <Button
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date" />

    <TextView
        android:id="@+id/displayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date_selected" />

    <Button
        android:id="@+id/selectDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_days"/>

    <TextView
        android:id="@+id/displayDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/days_selected" />

    <Button
        android:id="@+id/returnToMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"/>
</LinearLayout>