<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_line" />

    <Button
        android:id="@+id/add_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_habit" />

    <Button
        android:id="@+id/view_habits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_habits" />

    <Button
        android:id="@+id/delete_habits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_habits" />

</LinearLayout>