<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/confirmation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/deleteHabits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"/>

    <Button
        android:id="@+id/doNotDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_delete"/>
</LinearLayout>